<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">B&amp;M Games</string>
    <string name="background_image">background image</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="tricky">TRICKY</string>
    <string name="get_started">GET STARTED</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="submit">Submit</string>
    <string name="hint">HINT</string>
    <string name="task1" tools:ignore="Typos">task1</string>
    <string name="text_here_text_here_text_here_text_here_text_here_text_here_text_here_text_here_text_here">Text here Text here Text here Text here Text here Text here Text here Text here Text here</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="nextActivity">Submit</string>
    <string name="nextActivityNext">Next</string>
    <string name="prizeTitleI">Your Prize Is:</string>
    <string name="prizeTitleII">Thank You!</string>
    <string name="prizeTitleIII">Select Your Bonus!</string>
    <string name="about"> \tGreetings, brain teaser lover!
        \n\tThis is one of the first versions of the application.
        This is a reason why it may contain some typos and not optimal tasks for each level.
        We will be happy to hear from you if you have any suggestions, propositions or concerns.
        Please, email us at \nvikles.games.dev@gmail.com.
        \n\tDepending on the success of the application, the number of questions will be increased,
        and their quality will be improved regularly.
        Also, translations into different languages will be added gradually.\n\tThis is a free but
        ad-based application. We hope that some advertisements will not overshadow the enjoyment
        of the game. Otherwise, we will enable a purchase of an ad-free version as soon as possible.
        \n\tPlease, keep in mind, some
        questions in the “Impossible” level are quite complicated and you may need a piece of paper
        and a pencil to solve them. If you can solve tasks from this category mentally, you are a
        true genius!\n\tEnjoy your time here in BRAIN &amp; MIND: LOGIC PUZZLES AND GAMES. We wish
        you success and good luck in your intellectual adventure.
</string>
    <string name= "aboutRu">Приветсвуем, любитель логических игр!
        \n\tЭто одна из первых версий приложения. Поэтому она может содержать опечатки или не оптимальные
        задания для каждого уровня. Мы будем рады услышать любые предложения по улучшению приложения.
        Пожалуйста, напишите нам на \nvikles.games.dev@gmail.com.
        \n\tВ зависимости от успешности приложения, мы будем увеличивать количество вопросов и улучшать
        их качество регулярно. Также постепенно будут добавляться переводы на разные языки.
        \n\tЭто бесплатное, но содержащее рекламу, приложение. Мы надеемся, что некоторые рекламные
        объявления не омрачат ваше удовольствие от игры. В противном случае мы добавим функцию
        покупки версии без рекламы уже в ближайшее время. \n\tУчтите, что некоторые вопросы уровня «Невозможный»
        довольно сложны, и для их решения вам могут понадобиться лист бумаги и карандаш. Если
        вы сможете мысленно решить задачи из этой категории, вы настоящий гений!
        \n\tМы желаем вам приятного времяпровождения и интеллектуальных успехов.
</string>
</resources>